--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.4",
+        "laravelcollective/html": "^6.4",
         "livewire/livewire": "^2.11",
         "spatie/laravel-permission": "^6.3"
     },
